--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
 	"name": "@re-taro/configs",
 	"version": "0.0.0",
 	"type": "module",
-	"description": "re-taro's configs",
+	"description": "re-taro's JavaScript/TypeScript toolchain configurations",
 	"repository": "https://github.com/re-taro/configs",
 	"author": "Rintaro Itokawa <me@re-taro.dev> (https://re-taro.dev)",
 	"license": "MIT",
 	"packageManager": "pnpm@10.6.1",
+	"engines": {
+		"node": ">=23.9.0"
+	},
 	"exports": {
 		"./eslint": {
 			"default": {
@@ -26,23 +29,98 @@
 		"src"
 	],
 	"scripts": {
-		"build": "tsc -b tsconfig.build.json",
+		"build": "pnpm typegen && tsc -b tsconfig.build.json",
 		"format": "prettier --write .",
-		"lint": "pnpm run --parallel /^lint:.*/",
+		"lint": "pnpm run /^lint:.*/",
 		"lint:eslint": "eslint .",
 		"lint:prettier": "prettier --cache --check .",
-		"lint:tsc": "tsc -b"
+		"lint:tsc": "tsc -b",
+		"test": "vitest run --typecheck",
+		"typegen": "tsx scripts/typegen.ts"
 	},
 	"peerDependencies": {
-		"eslint": "^9.0.0",
+		"@eslint/css": "^0.1.0 || ^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0",
+		"@eslint/js": "^9.0.0",
+		"@eslint/markdown": "^4.0.0 || ^5.0.0 || ^6.0.0",
+		"eslint": "^9.20.0",
+		"eslint-config-flat-gitignore": "^2.0.0",
+		"eslint-config-prettier": "^10.0.0",
+		"eslint-flat-config-utils": "^2.0.0",
+		"eslint-import-resolver-typescript": "^3.7.0 || ^3.8.0 || ^3.9.0 || ^4.0.0",
+		"eslint-plugin-import-x": "^4.0.0",
+		"eslint-plugin-jsx-a11y": "^6.10.0",
+		"eslint-plugin-n": "^17.0.0",
+		"eslint-plugin-promise": "^7.0.0",
+		"eslint-plugin-react": "^7.35.0 || ^7.36.0 || ^7.37.0",
+		"eslint-plugin-react-hooks": "^5.0.0",
+		"eslint-plugin-regexp": "^2.3.0 || ^2.4.0 || ^2.5.0 || ^2.6.0 || ^2.7.0",
+		"eslint-plugin-storybook": "^0.10.0 || ^0.11.0",
+		"eslint-plugin-unicorn": "^57.0.0",
+		"eslint-plugin-unused-imports": "^4.0.0",
+		"globals": "^14.0.0 || ^15.0.0 || ^16.0.0",
 		"prettier": "^3.0.0",
 		"prettier-plugin-jsdoc": "^1.0.0",
 		"prettier-plugin-pkg": "^0.18.0",
-		"prettier-plugin-sort-json": "^3.0.0 || ^4.0.0"
+		"prettier-plugin-sort-json": "^3.0.0 || ^4.0.0",
+		"typescript-eslint": "^8.0.0"
 	},
 	"peerDependenciesMeta": {
+		"@eslint/css": {
+			"optional": false
+		},
+		"@eslint/js": {
+			"optional": false
+		},
+		"@eslint/markdown": {
+			"optional": false
+		},
 		"eslint": {
 			"optional": true
+		},
+		"eslint-config-flat-gitignore": {
+			"optional": false
+		},
+		"eslint-config-prettier": {
+			"optional": false
+		},
+		"eslint-flat-config-utils": {
+			"optional": false
+		},
+		"eslint-import-resolver-typescript": {
+			"optional": true
+		},
+		"eslint-plugin-import-x": {
+			"optional": false
+		},
+		"eslint-plugin-jsx-a11y": {
+			"optional": false
+		},
+		"eslint-plugin-n": {
+			"optional": false
+		},
+		"eslint-plugin-promise": {
+			"optional": false
+		},
+		"eslint-plugin-react": {
+			"optional": false
+		},
+		"eslint-plugin-react-hooks": {
+			"optional": false
+		},
+		"eslint-plugin-regexp": {
+			"optional": false
+		},
+		"eslint-plugin-storybook": {
+			"optional": false
+		},
+		"eslint-plugin-unicorn": {
+			"optional": false
+		},
+		"eslint-plugin-unused-imports": {
+			"optional": false
+		},
+		"globals": {
+			"optional": false
 		},
 		"prettier": {
 			"optional": true
@@ -55,16 +133,43 @@
 		},
 		"prettier-plugin-sort-json": {
 			"optional": false
+		},
+		"typescript-eslint": {
+			"optional": false
 		}
 	},
 	"devDependencies": {
+		"@eslint/css": "0.5.0",
+		"@eslint/js": "9.22.0",
+		"@eslint/markdown": "6.3.0",
 		"@re-taro/configs": "file:.",
+		"@types/eslint-plugin-jsx-a11y": "6.10.0",
 		"@types/node": "22.13.10",
+		"@typescript-eslint/parser": "8.26.0",
+		"@vitest/eslint-plugin": "1.1.37",
 		"eslint": "9.22.0",
+		"eslint-config-flat-gitignore": "2.1.0",
+		"eslint-config-prettier": "10.1.1",
+		"eslint-flat-config-utils": "2.0.1",
+		"eslint-import-resolver-typescript": "4.1.1",
+		"eslint-plugin-import-x": "4.6.1",
+		"eslint-plugin-jsx-a11y": "6.10.2",
+		"eslint-plugin-n": "17.16.2",
+		"eslint-plugin-promise": "7.2.1",
+		"eslint-plugin-react": "7.37.4",
+		"eslint-plugin-react-hooks": "5.2.0",
+		"eslint-plugin-regexp": "2.7.0",
+		"eslint-plugin-storybook": "0.11.4",
+		"eslint-plugin-unicorn": "57.0.0",
+		"eslint-plugin-unused-imports": "4.1.4",
+		"eslint-typegen": "2.0.0",
+		"globals": "16.0.0",
 		"pnpm": "10.6.1",
 		"prettier": "3.5.3",
 		"prettier-plugin-jsdoc": "1.3.2",
-		"prettier-plugin-tailwindcss": "0.6.11",
-		"typescript": "5.8.2"
+		"tsx": "4.19.3",
+		"typescript": "5.8.2",
+		"typescript-eslint": "8.26.0",
+		"vitest": "3.0.8"
 	}
 }
