--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -11,6 +11,7 @@
 		"sourceMap": true,
 		"target": "ES2022"
 	},
+	"exclude": ["src/**/*.test.ts"],
 	"extends": "./tsconfig.base.json",
 	"include": ["src"]
 }
