chore: update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,4 +1,11 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": ["local>re-taro/renovate-config"]
+	"extends": ["local>re-taro/renovate-config"],
+	"packageRules": [
+		{
+			"matchDepTypes": ["devDependencies"],
+			"matchPackageNames": ["!@types/*", "!tsx", "!typescript", "!vitest"],
+			"semanticCommitType": "fix"
+		}
+	]
 }
