--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@eslint/css": "^0.1.0 || ^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0",
 		"@eslint/js": "^9.0.0",
 		"@eslint/markdown": "^4.0.0 || ^5.0.0 || ^6.0.0",
+		"@vitest/eslint-plugin": "^1.0.0",
 		"eslint": "^9.20.0",
 		"eslint-config-flat-gitignore": "^2.0.0",
 		"eslint-config-prettier": "^10.0.0",
@@ -72,6 +73,9 @@
 			"optional": false
 		},
 		"@eslint/markdown": {
+			"optional": false
+		},
+		"@vitest/eslint-plugin": {
 			"optional": false
 		},
 		"eslint": {
