--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 		"@eslint/css": "^0.1.0 || ^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0",
 		"@eslint/js": "^9.0.0",
 		"@eslint/markdown": "^4.0.0 || ^5.0.0 || ^6.0.0",
+		"@typescript-eslint/type-utils": "^8.0.0",
+		"@typescript-eslint/utils": "^8.0.0",
 		"@vitest/eslint-plugin": "^1.0.0",
 		"eslint": "^9.20.0",
 		"eslint-config-flat-gitignore": "^2.0.0",
@@ -73,6 +75,12 @@
 			"optional": false
 		},
 		"@eslint/markdown": {
+			"optional": false
+		},
+		"@typescript-eslint/type-utils": {
+			"optional": false
+		},
+		"@typescript-eslint/utils": {
 			"optional": false
 		},
 		"@vitest/eslint-plugin": {
@@ -149,7 +157,8 @@
 		"@re-taro/configs": "file:.",
 		"@types/eslint-plugin-jsx-a11y": "6.10.0",
 		"@types/node": "22.14.0",
-		"@typescript-eslint/parser": "8.26.0",
+		"@typescript-eslint/type-utils": "8.29.0",
+		"@typescript-eslint/utils": "8.29.0",
 		"@vitest/eslint-plugin": "1.1.39",
 		"eslint": "9.24.0",
 		"eslint-config-flat-gitignore": "2.1.0",
@@ -173,7 +182,7 @@
 		"prettier-plugin-jsdoc": "1.3.2",
 		"tsx": "4.19.3",
 		"typescript": "5.8.3",
-		"typescript-eslint": "8.26.0",
+		"typescript-eslint": "8.29.0",
 		"vitest": "3.1.1"
 	}
 }
