--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
 		"build": "pnpm typegen && tsc -b tsconfig.build.json",
 		"format": "prettier --write .",
 		"lint": "pnpm run /^lint:.*/",
-		"lint:eslint": "eslint .",
-		"lint:prettier": "prettier --cache --check .",
+		"lint:eslint": "eslint . --concurrency=auto",
+		"lint:prettier": "prettier --check .",
 		"lint:tsc": "tsc -b",
 		"test": "vitest run --typecheck",
 		"typegen": "tsx scripts/typegen.ts"
@@ -42,6 +42,7 @@
 		"@eslint/css": "^0.1.0 || ^0.2.0 || ^0.3.0 || ^0.4.0 || ^0.5.0 || ^0.6.0 || ^0.9.0 || ^0.10.0|| ^0.11.0 || ^0.12.0 || ^0.13.0",
 		"@eslint/js": "^9.0.0",
 		"@eslint/markdown": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0",
+		"@prettier/plugin-oxc": "^0.0.4",
 		"@typescript-eslint/type-utils": "^8.0.0",
 		"@typescript-eslint/utils": "^8.0.0",
 		"@vitest/eslint-plugin": "^1.0.0",
@@ -61,7 +62,7 @@
 		"eslint-plugin-unicorn": "^57.0.0 || ^58.0.0 || ^59.0.0 || ^61.0.0",
 		"eslint-plugin-unused-imports": "^4.0.0",
 		"globals": "^14.0.0 || ^15.0.0 || ^16.0.0",
-		"prettier": "^3.0.0",
+		"prettier": "^3.6.0",
 		"prettier-plugin-jsdoc": "^1.0.0",
 		"prettier-plugin-pkg": "^0.18.0 || ^0.19.0 || ^0.20.0 || ^0.21.0",
 		"prettier-plugin-sort-json": "^3.0.0 || ^4.0.0",
@@ -75,6 +76,9 @@
 			"optional": false
 		},
 		"@eslint/markdown": {
+			"optional": false
+		},
+		"@prettier/plugin-oxc": {
 			"optional": false
 		},
 		"@typescript-eslint/type-utils": {
@@ -154,6 +158,7 @@
 		"@eslint/css": "0.13.0",
 		"@eslint/js": "9.37.0",
 		"@eslint/markdown": "7.4.0",
+		"@prettier/plugin-oxc": "0.0.4",
 		"@re-taro/configs": "file:.",
 		"@types/eslint-plugin-jsx-a11y": "6.10.1",
 		"@types/node": "22.18.10",
